# talm

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/hooks/: pre-commit
src/project_llm/: config.py  logger.py  tokenizer.bpe
src/project_llm/config/: __init__.py  data.py  model.py  root.py  tokenizer.py  training.py
src/project_llm/data/: __init__.py  config.py  download.py  utils.py
src/project_llm/model/: encoding.py  model.py
src/project_llm/scripts/: download_data.py  download_fineweb.py  train_model.py  train_tokenizer.py
src/project_llm/scripts/model/: pretrain.py  trainer.py
src/project_llm/tokenizer/: config.py  tokenizer.py  train.py  trainer.py
src/talm/: __init__.py  llm.py  lm.py  logger.py  lr_scheduler.py  resources.py  tokenizer.py
src/talm/config/: __init__.py  data.py  model.py  root.py  tokenizer.py  training.py
src/talm/data/: __init__.py  utils.py
src/talm/model/: attention.py  block.py  mlp.py  model.py  modules.py  norm.py
src/talm/scripts/: download_data.py  helpers.py  train_tokenizer.py
src/talm/scripts/model/: common.py  pretrain.py  sft.py  trainer.py
tests/: conftest.py  test_llm.py  test_lm.py  test_lr_scheduler.py  test_tokenizer.py
tests/data/: test_utils.py
tests/model/: test_attention.py  test_block.py  test_encoding.py  test_mlp.py  test_model.py  test_modules.py
tests/scripts/: test_helpers.py
tests/tokenizer/: test_tokenizer.py  test_trainer.py
tokenizers/: base.json
