[project]
name = "project_llm"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "regex>=2024.7.24",
    "torch>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
train_tokenizer = "project_llm.tokenizer.train:main"
download_data = "project_llm.data.download:main"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "datasets<=2.21.0",
    "pytest-mock>=3.14.0",
]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.rye.scripts]
test = { cmd = "pytest --cov=src/ tests/" }
test-ui = { cmd = "pytest --cov=src/ --cov-report=html tests/" }

fix = { chain = [
   "lint:ruff",
   "ruff format",
]}

"lint:ruff" = { cmd = "ruff check --fix" }
lint = { chain = [
   "lint:ruff",
   "mypy ."
]}

"docs:serve" = { cmd = "mkdocs serve -f mkdocs.yml" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
   # isort
   "I",
   # remove unused imports
   "F401",
]

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
known-first-party = ["project_llm", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = "slow: mark tests as slow"

[tool.coverage.run]
omit = [
   "train.py",
   "download.py",
   "logger.py"
]

[tool.coverage.report]
fail_under = 90

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project_llm"]
